# cmus-discord-rpc

./: Cargo.toml  README.md
src/: album_art.rs  main.rs
