[package]
name = "cmus-discord-rpc"
version = "0.2.0"
authors = ["Bond_009 <bond.009@outlook.com>"]
description = "Displays the currently playing song from cmus in Discord using Rich Presence"
keywords = ["discord", "rpc", "cmus"]
repository = "https://github.com/Bond-009/cmus-discord-rpc"
edition = "2024"
license = "GPL-3.0-only"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
discord-rpc-client = { git = "https://github.com/Inevitabby/discord-rpc-client.rs", branch = "add-activity-status" }
env_logger = "0.11"
log = "0.4"
regex = "1.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
